prevent scrolling with overflow hidden on body

--- a/style.css
+++ b/style.css
@@ -101,6 +101,22 @@ nav a {
     text-decoration: none;
     color: var(--neutral-very_dark_blue);
     font-size: 1.3rem;
+}
+
+.menu-open {
+    position: relative;
+    /* height: 100%; */
+    overflow: hidden;
+}
+
+.menu-open::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: hsl(240, 100%, 5%, 0.5);
 
 }
 
